compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__aliased_string_prefix_pattern_referenced_in_guard.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn main(x) {\n  case x {\n    \"a\" as letter <> _ if letter == x -> letter\n    _ -> \"wibble\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    "a" as letter <> _ if letter == x -> letter
    _ -> "wibble"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(binary()) -> binary().
main(X) ->
    case X of
        <<"a"/utf8, _/binary>> when ~"a" =:= X ->
            Letter = ~"a",
            Letter;

        _ ->
            ~"wibble"
    end.
