compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__alternative_patter_with_string_alias.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn main(x) {\n  case x {\n    \"a\" as letter <> _ | \"b\" as letter <> _ -> letter\n    _ -> \"wibble\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    "a" as letter <> _ | "b" as letter <> _ -> letter
    _ -> "wibble"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(binary()) -> binary().
main(X) ->
    case X of
        <<"a"/utf8, _/binary>> ->
            Letter = ~"a",
            Letter;

        <<"b"/utf8, _/binary>> ->
            Letter = ~"b",
            Letter;

        _ ->
            ~"wibble"
    end.
