compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__bit_array_assignment_utf16_little_endian.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn main() {\n  case <<\"Hello\":utf16-little>> {\n    <<\"Hello\" as m:utf16-little>> -> m\n    _ -> \"\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case <<"Hello":utf16-little>> {
    <<"Hello" as m:utf16-little>> -> m
    _ -> ""
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> binary().
main() ->
    case <<"Hello"/utf16-little>> of
        <<"Hello"/utf16-little>> ->
            M@1 = <<"Hello"/utf8>>,
            M@1;

        _ ->
            <<""/utf8>>
    end.
