compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__bit_array_assignment_utf32.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn main() {\n  case <<\"Hello\":utf32>> {\n    <<\"Hello\" as m:utf32>> -> m\n    _ -> \"\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case <<"Hello":utf32>> {
    <<"Hello" as m:utf32>> -> m
    _ -> ""
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> binary().
main() ->
    case <<"Hello"/utf32>> of
        <<"Hello"/utf32>> ->
            M@1 = <<"Hello"/utf8>>,
            M@1;

        _ ->
            <<""/utf8>>
    end.
