compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__case_defining_some_variables_that_are_later_shadowed_2.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn go(x) {\n  case x {\n    1 | 2 -> {\n      let a = 1\n      Nil\n    }\n    3 -> {\n      let a = 2\n      Nil\n    }\n    _ -> Nil\n  }\n\n  let a = 4\n  a + 1\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    1 | 2 -> {
      let a = 1
      Nil
    }
    3 -> {
      let a = 2
      Nil
    }
    _ -> Nil
  }

  let a = 4
  a + 1
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(integer()) -> integer().
go(X) ->
    case X of
        1 ->
            A = 1,
            nil;

        2 ->
            A = 1,
            nil;

        3 ->
            A@1 = 2,
            nil;

        _ ->
            nil
    end,
    A@2 = 4,
    A@2 + 1.
